# Pose-Extraction-and-Injury-Analytics

./: .gitignore  batch_process.py  pyproject.toml  readme.MD  requirements.txt  run.py  run_mining.py
outputs/: anomaly_feature_contributions.csv  anomaly_meta.json  anomaly_per_rep_contributions.csv  anomaly_scores.csv  association_itemsets.csv  association_meta.json  association_rules.csv  classification_results.json  enriched_dataset.csv  feature_importance.csv  mining_config.json  pca_model.pkl  scaler.pkl
squat_analysis/: config.py  extraction.py  features.py  inference.py  pipeline.py  preprocessing.py  utils.py
squat_analysis/mining/: anomaly.py  association.py  classification.py  clustering.py  preparation.py  sequential.py
tests/: test_integration.py
