[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squat_analysis"
version = "0.1.0"
requires-python = ">=3.9,<3.12"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "mediapipe==0.10.11",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["squat_analysis*"]
